2004-04-15  MenTaLguY <mental@rydia.net>

	* most files in src/: removed many old "compatable" struct typedefs

	* src/libarikkei/arikkei-dict.cpp, src/libarikkei/arikkei-dict.h:
	  removed unused arikkei files

	* configure.in: added gtkmm dependency

2004-04-14  Kees Cook <kees@outflux.net>

	* src/helper/unit-menu.cpp: Turns out I found a 2nd bug while
	  investigating patch 934358.  I've applied this patch again, which gives
	  us the entire fix.
	* src/draw-context.cpp: Investigated patch 934351 from cth103.  Applied a
	  slight variation to conform to the function calling styles of that code.
	* configure.in: Implemented gcc version test for >= 3.0.0
	* src/file.cpp, src/interface.cpp, share/icons/icons.svg, src/verbs.cbb:
	  finished "File / Revert" implementation.  Found a memory leak in
      "file_save".  Added more sanity checking to "sp_file_revert" and more
	  status messages.
	* src/main.cpp, src/file.h, src/file.cpp: removed redundant code, implemented
	  in "sp_file_open".

2004-04-13  Kees Cook <kees@outflux.net>

	* tools-version.sh: added a possible fix for BSDish tools.
	* configure.in, share/patterns/Makefile.am: inkscape janitor strikes
	  again!  This is a quick cleanup to Ted's new directories.  Looks
	  like "patterns" got left out.
	* share/clipart/.cvsignore, share/templates/.cvsignore,
	  share/examples/.cvsignore, share/fonts/.cvsignore,
	  share/gradients/.cvsignore, share/keyboards/.cvsignore,
	  share/palettes/.cvsignore, share/patterns/.cvsignore:
	  Added Makefile build-cruft to .cvsignores.
	* src/helper/unit-menu.cpp: applied a variation to patch 934358 from cth103
	  to fix grid unit changing bug.
	* configure.in: fixed capitalization of "libpng" to avoid confusion.
	* src/sp-namedview.cpp, src/document.cpp, src/document.h, src/file.cpp,
	  src/file.h, src/document-undo.cpp, src/interface.cpp, src/verbs.cpp,
	  src/verbs.h:
	  Newly opened files will only create new windows if the current document
	  is untouched.  (RFE#928517)